Добавил изменение скиллов через админку, добавление записей в блог, авторизацию

--- a/source/style/blocks/_card.scss
+++ b/source/style/blocks/_card.scss
@@ -11,7 +11,7 @@
     width: 393px;
     @include desctop() {
         width: 377px;
-        height: 393px;
+        min-height: 393px;
     }
     @include tablets() {
         width: 344px;
