--- a/source/style/blocks/_welcom-menu.scss
+++ b/source/style/blocks/_welcom-menu.scss
@@ -1,4 +1,8 @@
-.welcome-menu {}
+.welcome-menu-auth {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
 
 .welcome-menu__list,
 .welcome-menu-auth__list {
