--- a/source/style/pages/_about.scss
+++ b/source/style/pages/_about.scss
@@ -12,6 +12,9 @@
     @include desctop() {
         width: 50%;
     }
+    @include tablets() {
+        width: 100%;
+    }
 }
 
 .about__col--left {
