--- a/source/style/pages/_blog.scss
+++ b/source/style/pages/_blog.scss
@@ -143,3 +143,8 @@
     border-bottom-right-radius: 40px;
     border-top-right-radius: 40px;
 }
+
+.posts__item {
+    list-style: none;
+    margin-bottom: 4.25rem;
+}
