--- a/views/blocks/navigation.pug
+++ b/views/blocks/navigation.pug
@@ -4,5 +4,5 @@ mixin navigation()
             'Мои работы': './works',
             'Блог': './blog',
             'Обо мне': './about',
-            'Авторизация': './index'
+            'Авторизация': './'
         })
