--- a/source/style/admin.scss
+++ b/source/style/admin.scss
@@ -48,15 +48,43 @@
 }
 
 .tabs__control {
-    flex: 1 1 auto;
+    max-width: 180px;
+    @include tablets {
+        flex: 1 1 auto;
+        max-width: 100%;
+    }
+}
+
+.tabs__link {
+    width: 180px;
+    height: 60px;
+    display: block;
+    padding: 20px 33px;
+    text-align: center;
+    text-decoration: none;
+    @include roboto;
+    color: #5d5a55;
+    text-transform: uppercase;
+    border-right: 2px solid #fff;
+    transition: .3s;
+    @include tablets {
+        min-width: 235px;
+    }
+    &:hover {
+        background-color: #fff;
+        color: gray;
+    }
 }
 
 .tabs__controls {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     list-style: none;
-    padding: 0;
-    margin: 0;
+    @include tablets {
+        justify-content: space-between;
+        padding: 0;
+        margin: 0;
+    }
     @include phones() {
         flex-direction: column;
         text-align: center;
@@ -89,21 +117,6 @@
             background-color: #fff;
             color: green;
         }
-    }
-}
-
-.tabs__link {
-    display: block;
-    padding: 25px 70px;
-    text-decoration: none;
-    font-family: 'robotomedium', sans-serif;
-    color: #5d5a55;
-    text-transform: uppercase;
-    border-right: 2px solid #fff;
-    transition: .3s;
-    &:hover {
-        background-color: #fff;
-        color: gray;
     }
 }
 
@@ -179,7 +192,7 @@
 }
 
 .admin-form_location_about {
-    justify-content: space-around;
+    justify-content: flex-start;
     flex-wrap: wrap;
     .admin-form__label {
         justify-content: space-between;
@@ -208,15 +221,16 @@
 }
 
 .admin-skills {
-    padding: 20px;
     border-radius: 5px;
-    background-color: rgba(50, 191, 155, 0.3);
     margin-bottom: 30px;
+    margin-right: 110px;
 }
 
 .admin-skills__list {
     width: 200px;
     margin-left: 20px;
+    list-style: none;
+    margin: 0;
 }
 
 .admin-skills__item {
@@ -225,14 +239,27 @@
     padding-right: 20px;
     &::after {
         content: '%';
+        position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        right: 0;
+        right: -10px;
     }
 }
 
+.admin-form__label-text {
+    color: #566358;
+    @include roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 32px;
+}
+
 .admin-skills__title {
-    font-family: 'robotomedium', sans-serif;
+    color: #566358;
+    @include roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 34px;
     margin-bottom: 20px;
 }
 
