--- a/source/style/blocks/_popup.scss
+++ b/source/style/blocks/_popup.scss
@@ -2,12 +2,15 @@
     display: none;
 }
 
+.popup-active {
+    display: block;
+}
+
 .popup__wrapper {
     background-color: $lightGreen;
     display: block;
     left: 0;
     min-height: 100%;
-    min-width: 1920px;
     opacity: .6;
     position: fixed;
     top: 0;
