--- a/views/pages/works.pug
+++ b/views/pages/works.pug
@@ -16,7 +16,7 @@ block content
                 .works-slider__col--left
                     .works-slider__wrapper.works-slider__wrapper--left
                         .works-slider__image-wrapper.js-slider__image-wrapper
-                            img.works-slider__image.js-works-slider__image(src='assets/img/work-1.png', alt='project-image', title='project-image')
+                            img.works-slider__image.js-works-slider__image(src='../assets/img/work-1.png', alt='project-image', title='project-image')
                         .works-slider__desc
                             +blockTitle('Сайт школы онлайн Образования','line', 'works-slider')
                             p.works-slider__technologies.js-slider-tehnologes HTML , CSS, JAVASCRIPT
