--- a/source/style/blocks/_works-slider.scss
+++ b/source/style/blocks/_works-slider.scss
@@ -66,7 +66,9 @@
     width: 100%;
     top: 0;
     z-index: 10;
-    padding: rem(114px) rem(64px) rem(100px) rem(57px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #e1e4d7;
     @include tablets() {
         position: relative;
@@ -80,12 +82,13 @@
 }
 
 .works-slider__image {
-    display: block;
-    width: 100%;
-    height: 100%;
+    max-width: 80%;
+    max-height: 80%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     @include tablets() {
-        max-width: 80%;
-        max-height: 80%;
         position: absolute;
         top: 50%;
         left: 50%;
