--- a/views/_template.pug
+++ b/views/_template.pug
@@ -17,8 +17,8 @@ html(lang="ru_RU")
         meta(charset="utf-8")
         title #{title}
         meta(content="Arseniy Berezin" name="author")
-        meta(content="`${description}`" name="description")
-        meta(content="`${keywords}`" name="keywords")
+        meta(content="Сайт портфолио" name="description")
+        meta(content="Сайт портфолио Арсений Березин веб-разработчик" name="keywords")
         meta(content="width=device-width, initial-scale=1" name="viewport")
         meta(content="ie=edge" http-equiv="x-ua-compatible")
 
