--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -18,7 +18,7 @@ block content
                     +blockTitle('Кто я','line')
                     .about-me__info
                         p
-                            | Я веб разработчик из Волгограда. Мне 22 года. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+                            | Меня зовут Арсений. Я веб разработчик из Волгограда. Мне 23 года. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
                             | Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
         .about__col.about__col--right
             +rightTriangle('about')
